# cohere-agent-cookbook

./: .env.example  .gitignore  ARCHIVE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: blueprint.json
common/: __init__.py  client.py  eval.py  test_recipes_compile.py
docs/: cloud-ai-architecture.md  migration-from-claude.md  self-hosting.md  when-to-use-cohere.md
docs/architecture/: blueprint.json
recipes/: __init__.py
recipes/01-tool-use/: README.md  recipe.py
recipes/02-multi-step-tool-use/: recipe.py
recipes/03-rag-with-citations/: recipe.py
recipes/04-coral-conversation/: recipe.py
recipes/05-rerank-pipeline/: recipe.py
recipes/06-embed-multilingual/: recipe.py
recipes/07-structured-output/: recipe.py
recipes/08-multi-agent-coordinator/: recipe.py
recipes/09-streaming-agents/: recipe.py
recipes/10-eval-framework/: framework.py
